--- a/src/Chess_Project_2/ChessFrame.form
+++ b/src/Chess_Project_2/ChessFrame.form
@@ -153,7 +153,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="46" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -368,9 +368,6 @@
               <SubComponents>
                 <Component class="javax.swing.JList" name="gameList">
                   <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Segoe UI" size="18" style="0"/>
-                    </Property>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                       <StringArray count="5">
                         <StringItem index="0" value="Item 1"/>
@@ -444,9 +441,6 @@
               <SubComponents>
                 <Component class="javax.swing.JList" name="gameList1">
                   <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Segoe UI" size="18" style="0"/>
-                    </Property>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                       <StringArray count="5">
                         <StringItem index="0" value="Game 1"/>
@@ -505,7 +499,7 @@
                           </Group>
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="jScrollPane4" alignment="1" pref="239" max="32767" attributes="0"/>
+                                  <Component id="jScrollPane4" alignment="1" pref="0" max="32767" attributes="0"/>
                                   <Group type="102" alignment="1" attributes="0">
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                           <Component id="resignButton" alignment="0" max="32767" attributes="0"/>
@@ -514,8 +508,8 @@
                                       </Group>
                                       <EmptySpace max="32767" attributes="0"/>
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="quitButton" alignment="0" pref="88" max="32767" attributes="0"/>
-                                          <Component id="restartButton" alignment="0" pref="88" max="32767" attributes="0"/>
+                                          <Component id="quitButton" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="restartButton" alignment="0" max="32767" attributes="0"/>
                                           <Component id="flipToggleButton" alignment="0" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
@@ -661,11 +655,11 @@
                       <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="rematchButton" max="32767" attributes="0"/>
-                          <Component id="loadGameButton" pref="113" max="32767" attributes="0"/>
+                          <Component id="loadGameButton" pref="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace pref="44" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="startNewGameButton" pref="113" max="32767" attributes="0"/>
+                          <Component id="startNewGameButton" pref="0" max="32767" attributes="0"/>
                           <Component id="forceQuitButton" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="69" max="-2" attributes="0"/>
@@ -932,9 +926,6 @@
               <SubComponents>
                 <Component class="javax.swing.JList" name="gameList2">
                   <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Segoe UI" size="18" style="0"/>
-                    </Property>
                     <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                       <StringArray count="5">
                         <StringItem index="0" value="Game 1"/>
